# ngram-markov

./: .gitignore  .gitmodules  README.md  efron_stein.ipynb  hessian.ipynb  local_grammar.ipynb  local_only_model.ipynb  ngram_model.ipynb  noise_operator.ipynb  pyproject.toml  spectral.ipynb
methods/: methods.html  methods.ipynb
scripts/: calculate_efron_stein.py  calculate_ngram_kl.py  calculate_ngrams.py  make_ngram_next_token_counts.py  make_pile_suffix_arrays.py  make_suffix_tree.py  model_ngrams.py  preprocess_data.py  preprocess_data_hf.py  reshard_memmap.py  train_nanogpt.py  train_ngram.py  train_tinystories.py  unshard_memmap.py
src/ngram_markov/: __init__.py  aitchison.py  hooked_transformer.py  indexed_dataset.py  model.py  ngrams.py  sampler.py  sparse.py  spectral.py  utils.py  zipf_sampler.py
src/ngram_markov/data/: gpt2_dataset.py
tokenizer/tinystories512/: merges.txt  tokenizer.json  tokenizer_config.json  vocab.json
