[project]
name = "ngram-markov"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dashiell Stander", email = "dash.stander@gmail.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "ipykernel>=6.29.4",
    "jupyter>=1.0.0",
    "jupyterlab>=4.1.6",
    "tqdm>=4.66.2",
    "plotly>=5.21.0",
    "polars>=0.20.22",
    "plotnine>=0.12.4",
    "scipy>=1.10.1",
    "torch>=2.3.0",
    "zstandard>=0.22.0",
    "pytest>=8.2.0",
    "transformers>=4.40.2",
    "datasets>=2.19.1",
    "rustworkx>=0.14.2",
    "pybind11>=2.12.0",
    "wandb>=0.17.0",
    "matplotlib>=3.9.0",
    "marisa-trie>=1.2.0",
    "tokengrams @ git+https://github.com/EleutherAI/tokengrams.git",
    "networkx>=3.3",
    "cola-ml>=0.0.5",
    "transformer-lens @ git+https://github.com/dashstander/TransformerLens.git",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
hello = "ngram_markov:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.workspace]
members = ["ngram-markov*"]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ngram_markov"]
